# skywatch-firmware

./: .clang-format  README.md  release.conf  west.yml
.github/workflows/: build.yml
ext/: west-commands.yml
ext/hello/: hello.py
lab8/: CMakeLists.txt  prj.conf
lab8/src/: app_thread.c  app_thread.h  data_mgr.c  data_mgr.h  main.c  sensor_thread.c  sensor_thread.h  shell_commands.c
lab8/tests/unit/: CMakeLists.txt  testcase.yaml
lab8/tests/unit/src/: main.c
src/: main.c
tests/unit/: testcase.yaml
twister-out/: twister.json  twister.xml  twister_report.xml  twister_suite_report.xml
